--- a/src/pages/watchVideo/index.css
+++ b/src/pages/watchVideo/index.css
@@ -7,11 +7,11 @@
 }
 
 .page-structure {
-  @apply w-[100vw] fixed  flex left-0 top-0 mt-16 h-[100vh]  overflow-y-scroll;
+  @apply w-[100vw] fixed  flex left-0 top-0 mt-16 mb-[20rem] h-[100vh]  overflow-y-scroll;
 }
 
 .video-section {
-  @apply min-w-[68vw] max-w-[68vw] h-auto  relative;
+  @apply md:min-w-[68vw] md:max-w-[68vw] h-auto  relative;
 }
 
 .details-comments-structure {
